--- a/MVarrior/app/build.gradle
+++ b/MVarrior/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'org.apache:pdfbox-android:1.8.9.0'
+    compile 'com.github.satyan:sugar:1.4'
 }
