--- a/MVarrior/app/src/main/AndroidManifest.xml
+++ b/MVarrior/app/src/main/AndroidManifest.xml
@@ -11,7 +11,13 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppTheme.NoActionBar"
+        android:name=".CVarriorApplication">
+
+        <meta-data android:name="DATABASE" android:value="cvarrior.db" />
+        <meta-data android:name="VERSION" android:value="9" />
+        <meta-data android:name="QUERY_LOG" android:value="true" />
+        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.mv.dimooon.mvarrior" />
 
         <activity android:name=".CVBaseActivity" android:screenOrientation="portrait"/>
 
